# Prism-Finance

./: .gitignore  main.py  pyproject.toml  skills-lock.json
components/: charts.py
engine/: backtest.py  data.py  strategy.py
openspec/changes/archive/2026-05-01-researcher-tool-init/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-01-researcher-tool-init/specs/backtest-engine/: spec.md
openspec/changes/archive/2026-05-01-researcher-tool-init/specs/data-ingestion/: spec.md
openspec/changes/archive/2026-05-01-researcher-tool-init/specs/interactive-charting/: spec.md
openspec/changes/archive/2026-05-01-researcher-tool-init/specs/researcher-ui/: spec.md
openspec/specs/backtest-engine/: spec.md
openspec/specs/data-ingestion/: spec.md
openspec/specs/interactive-charting/: spec.md
openspec/specs/researcher-ui/: spec.md
tests/: test_engine.py
