[project]
name = "prism-finance"
version = "0.1.0"
description = "Stock Chart & Backtesting Researcher Tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "pandas",
    "plotly",
    "yfinance",
    "pyarrow",
    "finmind"
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.2",
    "pandas-stubs>=2.3.3.260113",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "types-pyyaml>=6.0.12.20260408",
]
